# schema-docs

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  schemacode.rst
