[tool.poetry]
name = "schema-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "schema_docs"}]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
