[tool.poetry]
name = "schema-docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bidsschematools"}]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.3.0"
myst-parser = "^0.18.1"
mkdocs-material = "^8.5.10"
sphinx-rtd-theme = "^1.1.1"
importlib-resources = "^5.10.0"
pandas = "^1.5.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
